# gemla-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-package.yml  publish-pypi.yml  publish-testpypi.yml  release.yml  tests.yml
docs/: CHANGELOG.md  api_contracts.md  architecture_card.md  cli_reference.md  examples.md  limitations.md  package_build.md  quickstart.md  release_checklist.md  roadmap_2_0.md  v1_release_candidate.md
examples/cybersecurity/: run_cyber_transport_demo.py
examples/industrial_telemetry/: run_industrial_telemetry_demo.py
examples/latent_embeddings/: run_latent_transport_demo.py
examples/market_microstructure/: run_market_microstructure_demo.py
examples/quickstart/: 01_minimal_pipeline.py
examples/vjepa_latent_transport/: README.md  run_vjepa_latent_transport_demo.py
reports/: cli_report.md
src/gemla/: __init__.py  config.py  exceptions.py  types.py
src/gemla.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gemla/benchmarks/: __init__.py  run_all_benchmarks.py  runner.py
src/gemla/cli/: __init__.py  main.py
src/gemla/controls/: __init__.py  control_suite.py
src/gemla/data/: __init__.py  cyber.py  industrial.py  market.py  (+1 more)
tests/: test_benchmarks.py  test_cli.py  test_cli_benchmark.py  test_cli_latent.py  test_cli_practical_demos.py  test_cli_vjepa.py  test_controls.py  test_cyber_demo.py  test_industrial_demo.py  test_latent_adapter.py  test_lifted_phase.py  test_market_demo.py  test_pipeline.py  test_types.py  test_version.py  test_vjepa_adapter.py
(+16 files in other folders)
