[project]
name = "gemla"
version = "1.0.0"
description = "GEMLA: Γ–EML–α Transport Architecture SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Predilytics Inc." }
]
keywords = [
    "transport-topology",
    "dynamical-systems",
    "path-measures",
    "lifted-phase",
    "world-models",
    "diagnostics"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.scripts]
gemla = "gemla.cli.main:main"

[project.urls]
Homepage = "https://github.com/Predilytics-inc/gemla-sdk"
Repository = "https://github.com/Predilytics-inc/gemla-sdk"
Issues = "https://github.com/Predilytics-inc/gemla-sdk/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]